src/App.scss
/* ... */
html,
body {
    height: 100%;
    color: $base-color;
    font-size: 100%;
    background-color: $color-dark;
    font-family: $font-stack-body;
    font-weight: $font-weight-light;
    line-height: $line-height-base;
}
p,
span,
div,
a {
    font-family: inherit;
}
h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
    margin: 0 0 1.5rem;
    padding: 0;
    font-family: $font-stack-heading;
    font-weight: $font-weight-heading;
}
* {
    box-sizing: border-box;
}
p {
    margin: 0 0 1.5rem;
    padding: 0;
}
a, .btn {
    @include transition(all 0.4s ease);
}
.text-center {
    text-align: center;
}
.color-text-light, .color-text-light > * {
    color: $color-text-light;
}
.color-text-dark, .color-text-dark > * {
    color: $color-text-dark;
}
.btn {
    &.btn-primary {
        cursor: pointer;
        font-size: 0.8750rem;
        color: $primary-color;
        padding: 15px 25px;
        border-radius: 4px;
        text-decoration: none;
        text-transform: uppercase;
        font-weight: $font-weight-light;
        border: 1px solid $primary-color;
        background-color: transparent;
        letter-spacing: 1px;
        @media (min-width: $screen-sm){
            font-size: 1rem;
            padding: 18px 28px;
        }
        @media (min-width: $screen-md){
            font-size: 1.125rem;
            padding: 20px 40px;
        }
        &:hover {
            outline: none;
            border-color: rgba($primary-color, $alpha: 0.9);
            background-color: rgba($primary-color, $alpha: 0.1);
        }
    }
}
body.nav-open {
    // overflow: hidden;
}
@media (min-width: $screen-md) {
    html ::-webkit-scrollbar {
      width: 10px;
      height: 10px;
    }
    html ::-webkit-scrollbar-button {
      display: none;
    }
    html ::-webkit-scrollbar-track {
      background-color: rgba($color-light, $alpha: 0.2);
    }
    html ::-webkit-scrollbar-track-piece {
        background-color: rgba($color-light, $alpha: 0.2);
    }
    html ::-webkit-scrollbar-thumb {
      background-color: $primary-color;
      border-radius: none;
    }
    html ::-webkit-scrollbar-corner {
        background-color: rgba($color-light, $alpha: 0.2);
    }
    html ::-webkit-resizer {
        background-color: rgba($color-light, $alpha: 0.2);
    }
}

// header nav
.header {
    width: 100%;
}

// section
.section {
    width: 100%;
    padding: 30px 0;
    scroll-margin-top: 58px;
    @media (min-width: $screen-sm){
        padding: 40px 0;
        scroll-margin-top: 75px;
    }
    &--light {
        background-color: $color-light;
    }
    &--dark {
        color: $color-text-light;
        background-color: $color-dark;
    }
}
.wrapper {
    margin: 0 auto;
    max-width: 1260px;
    padding-left: 1rem;
    padding-right: 1rem;
    &--push {
        position: relative;
        @media (min-width: $screen-sm){
            padding-left: 80px;
            padding-right: 80px;
        }
    }
}

.app {
    &--header {
        position: fixed;
        width: 100%;
        z-index: 1;
        background-color: rgba($color: $color-dark, $alpha: 0.75);
    }
    &--nav {
        width: 100%;
        display: flex;
        .logo {
            a {
                margin: 12px 10px;
                display: block;
                width: 34px;
                height: 34px;
                @media (min-width: $screen-sm){
                    margin: 15px 15px;
                    width: 45px;
                    height: 45px;
                }
                svg {
                    width: 34px;
                    height: 34px;
                    @media (min-width: $screen-sm){
                        width: 45px;
                        height: 45px;
                    }
                }
            }
        }
        .burger {
            margin-left: auto;
            margin: 12px 15px 0 auto;
            text-align: right;
            width: 30px;
            @media (min-width: $screen-xs){
                margin: 20px 15px 0 auto;
                width: 50px;
            }
            .hamburger {
                margin: 0;
                padding: 0;
                border: 0;
                outline: none;
                position: relative;
                cursor: pointer;
                width: 30px;
                height: 22px;
                background-color: transparent;
                &:after, &:before, .line {
                    content: "";
                    height: 0;
                    width: 100%;
                    position: absolute;
                    transform: translateY(-50%);
                    border-bottom: 2px solid $color-text-light;
                    @include transition(all 0.3s ease-out);
                }
                &:before {
                    top: 0;
                    left: 0;
                }
                &:after {
                    top: 100%;
                    right: 0;
                }
                .line {
                    top: 50%;
                    right: 0;
                }
                &.test {
                    .line {
                        opacity: 0;
                    }
                    &:before {
                        -webkit-transform: rotate(-45deg) translate(-8px, 6px);
                        transform: rotate(-45deg) translate(-8px, 6px);
                    }
                    &:after {
                        -webkit-transform: rotate(45deg) translate(-9px, -8px);
                        transform: rotate(45deg) translate(-9px, -8px);
                    }
                }
            }
            .menu {
                width: 1px;
                height: 1px;
                position: absolute;
                white-space: nowrap;
                overflow: hidden;
            }
        }
    }
}
/* ... */

